updated interface icons and ripple effects.

--- a/app/src/main/res/layout/dialog_person_add.xml
+++ b/app/src/main/res/layout/dialog_person_add.xml
@@ -5,7 +5,7 @@
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/bg_dialog"
+    android:background="@drawable/sp_dialog_bg"
     android:padding="10dp">
 
     <TextView
@@ -85,8 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/colorActiveButtonBackground"
-        android:foreground="@drawable/ripple_primary"
+        android:background="@drawable/rp_primary"
         android:text="@string/btn_text_add"
         android:textColor="@color/colorActiveButtonText"
         app:layout_constraintBottom_toBottomOf="parent"
