--- a/app/src/main/res/layout/item_view_entry.xml
+++ b/app/src/main/res/layout/item_view_entry.xml
@@ -18,8 +18,8 @@
             android:id="@+id/item_entry_iv_edt"
             android:layout_width="70dp"
             android:layout_height="match_parent"
-            android:background="@color/colorOrange"
-            android:foreground="@drawable/ripple_orange"
+            android:background="@color/colorIconEntryActionOrange"
+            android:foreground="@drawable/rp_primary"
             android:clickable="true"
             android:contentDescription="@string/iv_desc_entry_swipe_item"
             android:gravity="center"
@@ -30,8 +30,8 @@
             android:id="@+id/item_entry_iv_del"
             android:layout_width="70dp"
             android:layout_height="match_parent"
-            android:background="@color/colorRed"
-            android:foreground="@drawable/ripple_red"
+            android:background="@color/colorIconEntryActionRed"
+            android:foreground="@drawable/rp_primary"
             android:clickable="true"
             android:contentDescription="@string/iv_desc_entry_swipe_item"
             android:gravity="center"
