--- a/app/src/main/res/layout/dialog_entry_add.xml
+++ b/app/src/main/res/layout/dialog_entry_add.xml
@@ -4,16 +4,16 @@
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/bg_dialog"
+    android:background="@drawable/sp_dialog_bg"
     android:padding="10dp">
 
     <TextView
         android:id="@+id/dialog_entry_add_tv_msg_entry_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:text="@string/tv_msg_entry_add_header"
         android:textAlignment="center"
-        android:layout_marginStart="10dp"
         android:textAllCaps="true"
         android:textColor="@color/colorDialogHeaderText"
         android:textSize="20sp"
@@ -59,8 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/colorActiveButtonBackground"
-        android:foreground="@drawable/ripple_primary"
+        android:background="@drawable/rp_primary"
         android:text="@string/btn_text_add"
         android:textColor="@color/colorActiveButtonText"
         app:layout_constraintEnd_toEndOf="parent"
