--- a/app/src/main/res/layout/dialog_person_upd.xml
+++ b/app/src/main/res/layout/dialog_person_upd.xml
@@ -4,7 +4,7 @@
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/bg_dialog"
+    android:background="@drawable/sp_dialog_bg"
     android:padding="10dp">
 
     <TextView
@@ -44,10 +44,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/colorActiveButtonBackground"
-        android:foreground="@drawable/ripple_primary"
+        android:background="@drawable/rp_primary"
         android:text="@string/btn_text_upd"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorActiveButtonText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dialog_person_upd_et_name" />
