--- a/app/src/main/res/layout/dialog_person_add.xml
+++ b/app/src/main/res/layout/dialog_person_add.xml
@@ -13,9 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginStart="10dp"
         android:text="@string/tv_msg_person_add_header"
         android:textAlignment="center"
-        android:layout_marginStart="10dp"
         android:textAllCaps="true"
         android:textColor="@color/colorDialogHeaderText"
         android:textSize="20sp"
@@ -23,7 +23,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <com.rengwuxian.materialedittext.MaterialEditText
         android:id="@+id/dialog_person_add_et_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,12 +32,20 @@
         android:hint="@string/hnt_person_name"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
-        android:maxLength="15"
+        android:maxLength="30"
+        android:maxLines="2"
+        android:textColorHint="@color/colorDialogFloatingHintText"
         android:textCursorDrawable="@drawable/sp_cursor"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dialog_person_add_tv_msg_person_add" />
+        app:layout_constraintTop_toBottomOf="@+id/dialog_person_add_tv_msg_person_add"
+        app:met_floatingLabel="highlight"
+        app:met_floatingLabelText="@string/hnt_person_name"
+        app:met_floatingLabelTextColor="@color/colorPrimary"
+        app:met_maxCharacters="30"
+        app:met_textColorHint="@color/colorDialogHintText"
+        app:met_underlineColor="@color/colorPrimary" />
 
     <TextView
         android:id="@+id/dialog_person_add_tv_i_owe"
