added Edit menu option.

--- a/app/src/main/res/layout/fragment_theme_list.xml
+++ b/app/src/main/res/layout/fragment_theme_list.xml
@@ -41,25 +41,14 @@
             android:textSize="16sp"
             tools:ignore="RelativeOverlap" />
 
-        <ImageView
-            android:id="@+id/fragment_theme_list_iv_theme_light_selected_bg"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+        <RadioButton
+            android:id="@+id/fragment_theme_list_rb_theme_light_selected"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="10dp"
-            android:contentDescription="@string/iv_desc_selected"
-            android:src="@drawable/sp_border_checkmark" />
-
-        <ImageView
-            android:id="@+id/fragment_theme_list_iv_theme_light_selected"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerInParent="true"
-            android:layout_marginEnd="10dp"
-            android:contentDescription="@string/iv_desc_selected"
-            android:src="@drawable/ic_check" />
+            android:layout_marginEnd="8dp"
+            android:buttonTint="@color/colorPrimary" />
 
     </RelativeLayout>
 
@@ -100,25 +89,14 @@
             android:textSize="16sp"
             tools:ignore="RelativeOverlap" />
 
-        <ImageView
-            android:id="@+id/fragment_theme_list_iv_theme_dark_selected_bg"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+        <RadioButton
+            android:id="@+id/fragment_theme_list_rb_theme_dark_selected"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="10dp"
-            android:contentDescription="@string/iv_desc_selected"
-            android:src="@drawable/sp_border_checkmark" />
-
-        <ImageView
-            android:id="@+id/fragment_theme_list_iv_theme_dark_selected"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerInParent="true"
-            android:layout_marginEnd="10dp"
-            android:contentDescription="@string/iv_desc_selected"
-            android:src="@drawable/ic_check" />
+            android:layout_marginEnd="8dp"
+            android:buttonTint="@color/colorPrimary" />
 
     </RelativeLayout>
 
