--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menu_btn_edit"
+        android:title="@string/menu_title_edit" />
+
+    <item
         android:id="@+id/menu_btn_delete"
         android:title="@string/menu_title_delete" />
 
